# chatbot-validador-cnh-rg

./: README.md
chatbot_document_validator/: Makefile  install.sh  pyproject.toml  run_app.py
chatbot_document_validator/examples/: __init__.py  basic_usage.py  sample_data.py
chatbot_document_validator/src/chatbot_document_validator/: app.py
chatbot_document_validator/src/chatbot_document_validator/models/: document_models.py
chatbot_document_validator/src/chatbot_document_validator/services/: document_processor.py  mindee_service.py  validation_service.py
chatbot_document_validator/src/chatbot_document_validator/utils/: file_utils.py
chatbot_document_validator/tests/: __init__.py  test_basic.py  test_mindee_mapping.py
